--- a/order.html
+++ b/order.html
@@ -112,6 +112,9 @@
             <li class="nav-item active fw-bold">
               <a class="nav-link" href="./contact.html">Contact Us</a>
             </li>
+            <li class="nav-item active fw-bold">
+                            <a class="nav-link text-white" href="./admin.html">Admin</a>
+                        </li>
           </ul>
         </div>
       </div>
