--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,9 @@
                     <li class="nav-item active fw-bold">
                         <a class="nav-link text-white" href="./contact.html">Contact Us</a>
                     </li>
+                    <li class="nav-item active fw-bold">
+                            <a class="nav-link text-white" href="./admin.html">Admin</a>
+                        </li>
                 </ul>
             </div>
         </div>
