--- a/morebrands.html
+++ b/morebrands.html
@@ -83,7 +83,7 @@
         <div class="container">
             <div class="row">
                 <div class="text-center "> 
-                    <h1>Some of our <span class="span-text">Best</span> Brands</h1>
+                    <h1>Some of our <span class="span-text">More Popular</span> Brands</h1>
                 </div>
             </div>
         </div>
